# GEC

./: NOTICES  cookiecutter.json  readme_en.md  readme_ja.md
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  dvc.yaml  pyproject.toml  readme_en.md  readme_ja.md
{{cookiecutter.project_slug}}/conf/: config.yaml
{{cookiecutter.project_slug}}/framework/: config.py  context.py  dvc_queue.py  get_sysconfig.py  hydra_init.py  mlflow_helper.py  reporter.py  reporter_helper.py  utils.py  wandb_helper.py  wandb_run.py
{{cookiecutter.project_slug}}/scripts/: batch_run.sh  batch_setting.sh  dvc_cat  dvc_hist  dvc_ls  exp.sh
{{cookiecutter.project_slug}}/src/: main.py
{{cookiecutter.project_slug}}/sysconf/: meta_config.yaml  mlflow_config.yaml  report_config.yaml
